# usbip-hil-controller

./: .gitmodules  pyproject.toml
.claude/memory/: MEMORY.md  feedback_ssh_openssh.md  project_camera_integration.md  project_state.md  reference_bench_host.md
.github/workflows/: example-hil-call.yml  hil-controller-ci.yml  ws-python-ci.yml
deploy/: controller.env.example  topology.example.yaml
deploy/systemd/: hil-controller.service
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md
docs/test-plans/: display-2900-featherwing-oled128x32.md
examples/: README.md  hil-call.sh  ws-python-caller.yml
examples/arduino-display/: job.json
examples/wippersnapper-arduino/: secrets.example.json
examples/wippersnapper-python/: .env.example  job-tachyon.json  job.json  secrets.example.json
run/: topology.yaml
scripts/: mint-token.py  setup-hil-host.sh  setup-submodules.sh  submit-arduino-display-test.sh
src/hil_controller/: __init__.py  config.py  main.py
src/hil_controller/adapters/: arduino_ws_exec.py  base.py  git_deploy.py  protomq_observer.py  shell_script.py  usb_fingerprint.py  usb_scan.py
src/hil_controller/api/: devices.py  health.py  jobs.py
tests/: conftest.py  test_arduino_ws_exec.py  test_camera_server.py  test_git_deploy.py  test_health.py  test_host_registry.py  test_jobs_api.py  test_protomq_observer.py  test_scheduler.py  test_shell_script_adapter.py  test_ssh_transport.py  test_usb_fingerprint.py  test_usb_ids_api.py  test_usb_scan.py  test_web_ui.py
tools/camera-server/: README.md  __init__.py  hil-camera.service  server.py  snapshot_server.py
(+45 files in other folders)
