[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hil-controller"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.111",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "asyncssh>=2.14",
    "pydantic-settings>=2.2",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anyio>=4.3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.21",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
hil-controller = "hil_controller.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/hil_controller"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
